// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`teste com apenas um item  1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpensesSumary
    ExpenseContador={1}
    ExpenseTotal={235}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h1>
        Veja o valor total das 
        1
         
        expense
         totais ,com o valor de 
        $2.35
</h1>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Veja o valor total das ",
          1,
          " ",
          "expense",
          " totais ,com o valor de ",
          "$2.35",
        ],
      },
      "ref": null,
      "rendered": Array [
        "Veja o valor total das ",
        1,
        " ",
        "expense",
        " totais ,com o valor de ",
        "$2.35",
      ],
      "type": "h1",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h1>
          Veja o valor total das 
          1
           
          expense
           totais ,com o valor de 
          $2.35
</h1>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Veja o valor total das ",
            1,
            " ",
            "expense",
            " totais ,com o valor de ",
            "$2.35",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Veja o valor total das ",
          1,
          " ",
          "expense",
          " totais ,com o valor de ",
          "$2.35",
        ],
        "type": "h1",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`teste com varias despesas  1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpensesSumary
    ExpenseContador={23}
    ExpenseTotal={5325729878752}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h1>
        Veja o valor total das 
        23
         
        expenses
         totais ,com o valor de 
        $53,257,298,787.52
</h1>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Veja o valor total das ",
          23,
          " ",
          "expenses",
          " totais ,com o valor de ",
          "$53,257,298,787.52",
        ],
      },
      "ref": null,
      "rendered": Array [
        "Veja o valor total das ",
        23,
        " ",
        "expenses",
        " totais ,com o valor de ",
        "$53,257,298,787.52",
      ],
      "type": "h1",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h1>
          Veja o valor total das 
          23
           
          expenses
           totais ,com o valor de 
          $53,257,298,787.52
</h1>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Veja o valor total das ",
            23,
            " ",
            "expenses",
            " totais ,com o valor de ",
            "$53,257,298,787.52",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Veja o valor total das ",
          23,
          " ",
          "expenses",
          " totais ,com o valor de ",
          "$53,257,298,787.52",
        ],
        "type": "h1",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
